--- a/package.json
+++ b/package.json
@@ -11,14 +11,26 @@
   "dependencies": {
     "@ai-sdk/groq": "^1.2.7",
     "@clerk/nextjs": "^6.14.3",
+    "@clerk/themes": "^2.2.31",
+    "@langchain/community": "^0.3.41",
+    "@langchain/google-vertexai": "^0.2.4",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@tabler/icons-react": "^3.31.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "ai": "^4.3.4",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.19.0",
+    "langchain": "^0.3.23",
+    "localtunnel": "^2.0.2",
     "lucide-react": "^0.487.0",
-    "motion": "^12.6.3",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
+    "motion": "^12.7.4",
     "next": "15.2.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -26,6 +38,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
+    "svix": "^1.64.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
